// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Button should be render danger colored button 1`] = `
.c0 {
  display: inline-block;
  font-size: 1.6rem;
  border-radius: 89px;
  line-height: 1.15em;
  padding: 1.2rem 2rem;
  color: #3C80F1;
  background: #FFFFFF;
  border: solid 1px #3C80F1;
}

.c0:active {
  box-shadow: inset 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
  width={null}
>
  button
</button>
`;

exports[`Component Button should be render fullWidth button 1`] = `
.c0 {
  display: inline-block;
  font-size: 1.6rem;
  border-radius: 89px;
  line-height: 1.15em;
  padding: 1.2rem 2rem;
  width: 100%;
  color: #3C80F1;
  background: #FFFFFF;
  border: solid 1px #3C80F1;
}

.c0:active {
  box-shadow: inset 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
  width={null}
>
  button
</button>
`;

exports[`Component Button should be render primary colored button 1`] = `
.c0 {
  display: inline-block;
  font-size: 1.6rem;
  border-radius: 89px;
  line-height: 1.15em;
  padding: 1.2rem 2rem;
  color: #FFFFFF;
  background: #3C80F1;
  border: solid 1px transparent;
}

.c0:active {
  box-shadow: inset 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
  width={null}
>
  button
</button>
`;

exports[`Component Button should be render without crash 1`] = `
.c0 {
  display: inline-block;
  font-size: 1.6rem;
  border-radius: 89px;
  line-height: 1.15em;
  padding: 1.2rem 2rem;
  color: #3C80F1;
  background: #FFFFFF;
  border: solid 1px #3C80F1;
}

.c0:active {
  box-shadow: inset 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
  width={null}
>
  button
</button>
`;
